--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -97,8 +97,8 @@
 	a, a:visited { color: #ecf0f1; text-decoration: underline; outline: 0; }
 	a:hover, a:focus { color: #bdc3c7; }
 	p a, p a:visited { line-height: inherit; }
-
-
+	a.newplaylist{float:right;margin: 1em;font-weight:bolder;color:#f39c12 }
+	a.newplaylist:hover{color:#f1c40f;}
 /* #Lists
 ================================================== */
 	ul, ol { margin-bottom: 20px; }
@@ -122,7 +122,7 @@
 	img.scale-with-grid {
 		max-width: 100%;
 		height: auto; }
-
+	img.author{padding-left: 2em;float:right;vertical-align: middle; border-radius: 50%;}
 
 /* #Buttons
 ================================================== */
